--- a/src/components/AccessibilityWidget.css
+++ b/src/components/AccessibilityWidget.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "OpenDyslexic";
+    src: url('https://dl.dropboxusercontent.com/s/qfpakpjedhsrdb9/OpenDyslexicAlta-Regular.ttf');
+}
+
 .accessibility-widget {
     position: fixed;
     padding: 10px;
